Added in props for each projects component as well as state with project items component | Added in logic on carousel clicks to change project with new scss files for projects and lots of html and styling

--- a/src/components/bundle.scss
+++ b/src/components/bundle.scss
@@ -18,6 +18,8 @@
 @import '../styling/global-variables';
 @import './common/common';
 @import './home/home';
+@import './projects/projects';
+
 body {
   background-color:rgba(0,0,0,0.05);
 }
