--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -46,15 +46,38 @@
   transform: translateX(-50%)
 }
 
+.bm-burger-button {
+  @include breakpoint(small only) {
+  right: 10% !important;
+  left: auto !important
+}
+}
+
+.bm-burger-button > span > span:first-child {
+  width: 150%;
+}
+
+.bm-burger-button > span > span:nth-child(2) {
+  width: 125%;
+}
+
 #projNav {
   display: flex;
   align-items: center;
+  padding-top: 25px;
+  justify-content: center;
   @include breakpoint(medium up) {
-  position: absolute;
+  position: relative;
   left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
-  padding: 25px;
+}
+@include breakpoint(large only) {
+  position: absolute;
+}
+@include breakpoint(small only) {
+  transform: scale(.75);
+  justify-content: flex-start;
 }
 }
 
