Added animate.css and animations and more logic for colored transitions

--- a/src/components/bundle.scss
+++ b/src/components/bundle.scss
@@ -19,6 +19,7 @@
 @import './common/common';
 @import './home/home';
 @import './projects/projects';
+@import '../styling/animate';
 
 body {
   background-color:rgba(0,0,0,0.05);
