--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -12,7 +12,7 @@
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
- z-index: -1
+ z-index: -1;
 }
 #mainPage {
   padding: 0 40px 40px 40px;
@@ -30,6 +30,16 @@
   }
 }
 
+#vidPreview {
+ max-height: 800px;
+ max-width: 400px;
+ min-width: 50px;
+ margin: auto;
+ display: flex;
+ @include breakpoint(small only) {
+  max-width: 100vw;
+ }
+}
 .menu-item:hover {
   opacity: 0.5
 }
