--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -77,7 +77,7 @@
 }
 
 img {
-  max-width: 500px;
+  max-height: 700px;
   @include breakpoint(medium up) {
     display: flex;
     margin: auto;
@@ -124,7 +124,14 @@ img {
   background-repeat: no-repeat;
   margin: 0 10px;
 }
-
+#contentAdditionVid {
+ max-height: 500px;
+ max-width: 250px;
+ min-width: 50px;
+ display: flex;
+ margin: auto;
+ max-width: 100vw;
+}
 
 .navItem {
   margin: 0 10px 0 10px;
