added instacard with logic

--- a/src/components/bundle.scss
+++ b/src/components/bundle.scss
@@ -20,6 +20,7 @@
 @import './home/home';
 @import './projects/projects';
 @import '../styling/animate';
+@import './projects/instacard/instacard';
 
 body {
   background-color:rgba(0,0,0,0.05);
