--- a/src/components/bundle.scss
+++ b/src/components/bundle.scss
@@ -21,6 +21,7 @@
 @import './projects/projects';
 @import '../styling/animate';
 @import './projects/instacard/instacard';
+@import './projects/instacard/awesome/styles.scss';
 
 body {
   background-color:rgba(0,0,0,0.05);
