styling and logic

--- a/src/components/bundle.scss
+++ b/src/components/bundle.scss
@@ -22,6 +22,7 @@
 @import '../styling/animate';
 @import './projects/instacard/instacard';
 @import './projects/instacard/awesome/styles.scss';
+@import '../styling/slide-styles';
 
 body {
   background-color:rgba(0,0,0,0.05);
