--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -109,7 +109,9 @@ img {
     justify-content: center;
   }
   @include breakpoint(small only) {
-    transform: scale(.75);
+    height: 57px !important;
+    width: 270px !important;
+    margin: auto;
   }
 }
 
