--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -16,12 +16,40 @@
   padding: 0 !important;
   margin-bottom: 30px !important;
 }
+.projArrow{
+  cursor: pointer;
+  animation: bounce 3.5s infinite;
+  margin: auto;
+}
+.projArrowVisible {
+  display: flex !important;
+  flex-direction: row;
+  margin-top: -250px;
+  @include breakpoint(medium down) {
+    margin-top: -100px;
+  }
+}
+#projArrows {
+  display: none;
+}
+.projArrow:hover {
+  opacity: 0.5;
+  transform: scale(1.25);
+  transition: all 1.5s;
+}
+#bentoBot {
+  animation: fadeOutDown ease-In 3s infinite;
+  animation-direction: alternate-reverse;
+}
 
 #projSubheader {
   font-weight: 500;
   font-size: 30px
 }
-
+#rowIcon {
+  margin: 0 !important;
+  padding-right: 12px;
+}
 #projDescription {
   font-size: 16px;
 }
@@ -83,18 +111,12 @@
   transform: translateX(-50%)
 }
 
-.bm-burger-button {
-  // @include breakpoint(small only) {
-  // right: 10% !important;
-  // left: auto !important
-  // }
-}
-
 img {
-  max-height: 700px;
+  max-height: 550px;
   @include breakpoint(medium up) {
     display: flex;
     margin: auto;
+    max-height: 680px;
   }
 }
 .bm-burger-button > span > span:first-child {
@@ -122,7 +144,7 @@ img {
     justify-content: center;
   }
   @include breakpoint(small only) {
-    height: 57px !important;
+    height: 75px !important;
     width: 270px !important;
     margin: auto;
   }
