ADDED CONTACT FORM nodemailere based | removed burger arrow/ edited styles | auto indentation

--- a/src/components/bundle.scss
+++ b/src/components/bundle.scss
@@ -23,6 +23,7 @@
 @import './projects/instacard/instacard';
 @import './projects/instacard/awesome/styles.scss';
 @import '../styling/slide-styles';
+@import './contact/contact';
 
 body {
   background-color:rgba(0,0,0,0.05);
