--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -14,6 +14,18 @@
  min-width: 100%;
  min-height: 100%;
  z-index: -1;
+ @include breakpoint(small only) {
+   max-width: 1000px;
+   max-height: 1000px;
+   margin-left: -250px;
+   -webkit-transform: rotate(90deg);
+   -moz-transform: rotate(90deg);
+   -o-transform: rotate(90deg);
+   -ms-transform: rotate(90deg);
+   transform: rotate(90deg);
+   right: auto;
+   bottom: auto;
+ }
 }
 #mainPage {
   padding: 0 40px 40px 40px;
@@ -70,10 +82,17 @@
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
-  height: 46px;
-  width: 46px;
+  height: 48px !important;
+  width: 48px !important;
 }
-
+.bm-cross-button:nth-child(1) {
+  height: 48px !important;
+  width: 48px !important;
+}
+.bm-cross-button:nth-child(3) {
+  height: 48px !important;
+  width: 48px !important;
+}
 /* Color/shape of close button cross */
 .bm-cross {
   background: #bdc3c7;
@@ -86,6 +105,13 @@
   font-size: 40px;
 }
 
+.bm-morph-shape {
+  @include breakpoint(small only) {
+    width: 0 !important;
+
+  }
+}
+
 /* Morph shape necessary with bubble or elastic */
 .bm-morph-shape {
   fill: #4B2F70;
@@ -95,6 +121,10 @@
 .bm-item-list {
   color: #b8b7ad;
   padding: 0.8em;
+  @include breakpoint(small only) {
+    padding: 0;
+    font-size: 25px;
+  }
 }
 
 /* Styling of overlay */
