--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -77,8 +77,9 @@
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: white;
+  background: #af3566 !important
 }
+
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
@@ -95,7 +96,7 @@
 }
 /* Color/shape of close button cross */
 .bm-cross {
-  background: #bdc3c7;
+  background: #af3566 !important;
 }
 
 /* General sidebar styles */
