--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -20,6 +20,7 @@
   cursor: pointer;
   animation: bounce 3.5s infinite;
   margin: auto;
+  font-weight: 600;
 }
 .projArrowVisible {
   display: flex !important;
