--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,7 +1,7 @@
 * {
   font-family: montserrat !important;
   color: white;
-  animation-delay: .5s;
+  // animation-delay: .5s;
 }
 
 .mainContent {
