--- a/src/components/projects/instacard/instacard.scss
+++ b/src/components/projects/instacard/instacard.scss
@@ -7,7 +7,6 @@
   cursor:pointer
 }
 .instaCard {
-  background: $teal;
   max-width: 500px;
   margin: auto;
   transform: scale(.8);
@@ -43,6 +42,11 @@
   padding-top: 5px;
   color: white;
   cursor: pointer;
+}
+.aws-btn--instagram > span > span > span {
+  color: white;
+  font-weight: 700;
+  font-size: 125%;
 }
 .cardPhoto {
   overflow: hidden;
