--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -21,14 +21,14 @@
   animation: bounce 3.5s infinite;
   margin: auto;
   font-weight: 600;
+
 }
 .projArrowVisible {
   display: flex !important;
   flex-direction: row;
-  margin-top: -250px;
-  @include breakpoint(medium down) {
-    margin-top: -100px;
-  }
+  // min-height: 30vh;
+  // padding-bottom: 3rem;
+  // align-items: flex-end;
 }
 #projArrows {
   display: none;
@@ -96,9 +96,10 @@
 }
 
 .projectRow {
-  min-height: 120vh;
+  min-height: 160vh;
   @include breakpoint(medium down){
     margin: 100px 0;
+    min-height: 250vh;
   }
 }
 
