--- a/src/components/projects/instacard/awesome/base/variables.scss
+++ b/src/components/projects/instacard/awesome/base/variables.scss
@@ -40,7 +40,7 @@ $button-color-whatsapp: #25d366;
 $button-color-github: #25292e;
 $button-color-reddit: #fc461e;
 $button-color-pinterest: #bd091c;
-$button-color-gplus: #ce5b4e;
+$button-color-gplus: #666;
 $button-color-youtube: #cc181e;
 $button-color-instagram-radial-light: radial-gradient(circle at 25% 110%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
 $button-color-instagram-radial-dark: radial-gradient(circle at 25% 110%, #b9a800 0%, #938500 5%, #b10f00 45%,#8c0061 60%,#002ca9 90%);
