--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -26,8 +26,8 @@
 .projArrowVisible {
   display: flex !important;
   flex-direction: row;
-  // min-height: 30vh;
-  // padding-bottom: 3rem;
+  min-height: 30vh;
+  padding-bottom: 3rem;
   // align-items: flex-end;
 }
 #projArrows {
@@ -42,7 +42,27 @@
   animation: fadeOutDown ease-In 3s infinite;
   animation-direction: alternate-reverse;
 }
-
+#smiAbout {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  padding: 3rem;
+}
+.aws-btn__content {
+  padding: 5px !important;
+}
+.smiLogo {
+  height: 50px;
+  width: 50px;
+}
+.progHide {
+  display: hidden !important
+}
+.progShow {
+  display: inherit !important;
+}
 #projSubheader {
   font-weight: 500;
   font-size: 30px
@@ -132,6 +152,11 @@ img {
 
 .slideInProjMain {
   animation: slideInLeft .8s ease-in;
+}
+.projectMainDiv {
+  max-width: 1440px;
+  height: 100%;
+  width: 100%;
 }
 #flippedArrow {
   filter: invert(100%)
