--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,3 +1,4 @@
+
 .projItem {
   padding: 15px 30px 15px 0;
   margin: 0
@@ -116,7 +117,7 @@
 }
 
 .projectRow {
-  min-height: 160vh;
+  min-height: 1000px;
   @include breakpoint(medium down){
     margin: 100px 0;
     min-height: 250vh;
